--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,26 +1,39 @@
+.expForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  width: 75%;
+  padding: 20px;
+  background-color: darkgray;
+  color: #000000;
+  font-family: 'Roboto', sans-serif;
+  border-radius: 10px;
+}
+
 .form-group {
-    margin-bottom: 20px;
-  }
+  width: 75%;
+  margin: 5px 0;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  outline: none;  
+  display: flex;
+  flex-direction: column;
+}
   
   .form-group label {
-    display: block;
-    font-size: 18px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    font-size: 1rem;
   }
   
   .form-control {
-    display: block;
     width: 100%;
-    height: 40px;
+    margin: 5px 0;
     padding: 10px;
-    font-size: 16px;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 4px;
-    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    border-radius: 5px;
+    border: none;
+    outline: none;
   }
   
   .form-control:focus {
@@ -31,35 +44,15 @@
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
   }
   
-  .btn {
-    display: inline-block;
-    font-weight: 400;
-    color: #212529;
-    text-align: center;
-    vertical-align: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    border-radius: 0.25rem;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  }
-  
   .btn-primary {
     color: #fff;
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: darkcyan;
+    border-color: darkcyan;
   }
   
   .btn-primary:hover {
     color: #fff;
-    background-color: #0069d9;
-    border-color: #0062cc;
+    background-color: #005b79;
+    border-color: #005b79;
   }
   
