--- a/src/styles/PersonalInfo.css
+++ b/src/styles/PersonalInfo.css
@@ -5,8 +5,8 @@
   margin: 0 auto;
   width: 75%;
   padding: 20px;
-  background-color: gray;
-  color: #fff;
+  background-color: darkgray;
+  color: #000000;
   font-family: 'Roboto', sans-serif;
   border-radius: 10px;
 }
@@ -34,14 +34,15 @@
 .btn {
   margin: 10px 0;
   padding: 10px;
-  width: 100%;
+  width: 25%;
   border: none;
   border-radius: 5px;
-  background-color: #008CBA;
+  background-color: darkcyan;
   color: #fff;
   font-size: 1rem;
   cursor: pointer;
 }
+
 
 .btn:hover {
   background-color: #005b79;
