--- a/src/styles/PersonalInfo.css
+++ b/src/styles/PersonalInfo.css
@@ -52,3 +52,16 @@
   font-size: 1.2rem;
   margin: 10px 0;
 }
+
+.read-cont {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  width: 75%;
+  padding: 20px;
+  background-color: darkgray;
+  color: #000000;
+  font-family: 'Roboto', sans-serif;
+  border-radius: 10px;
+}
