--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,4 +1,21 @@
+:root {
+  font-family: 'Roboto', sans-serif;
+}
 .app-cont {
     background-color: gray;
     padding: 10px;
+}
+
+.app-cont h1 {
+    color: #000000;
+    font-size: 2rem;
+    text-align: center;
+}
+
+.app-cont h2 {
+    color: #000000;
+    font-size: 1.5rem;
+    text-align: center;
+    margin-bottom: 15px;
+    width: 100%;
 }
